crates/compiler/cypress/tests/snapshots/test_parse__parenthetical_var_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "(whee)\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginParens Ident=>LowerIdent@1 EndParens)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Ident("whee")

[=== formatted below ===]

