crates/compiler/cypress/tests/snapshots/test_parse__parenthetical_var_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "whee\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr Ident=>LowerIdent@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Ident("whee")

[=== formatted below ===]
whee
