crates/compiler/cypress/tests/snapshots/test_parse__pattern_as_list_rest_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "when myList is\n    [first, .. as rest] -> 0\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginWhen
            Ident=>LowerIdent@1
            InlineKwIs=>KwIs@2
            (BeginPatternList
                Ident=>LowerIdent@4
                (* PatternDoubleDot=>DoubleDot@6 Ident=>LowerIdent@8 EndPatternAs)
            EndPatternList)
            InlineWhenArrow=>OpArrow@10
            Num=>Int@11
        EndWhen)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
When(Ident("myList"), [PatternList([Ident("first"), PatternAs(PatternDoubleDot, "rest")]), IntBase10("0")])

[=== formatted below ===]

